# lazytask

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build.yml  check-pr.yml  ci.yml
config/: default.toml  keybindings.toml  themes.toml
docs/: configuration.md  development.md  keybindings.md
src/: app.rs  config.rs  lib.rs  main.rs  taskwarrior.rs
src/data/: cache.rs  cli_interface.rs  database.rs  export.rs  filters.rs  mod.rs  models.rs
src/handlers/: commands.rs  input.rs  mod.rs  navigation.rs  sync.rs
src/ui/: app_ui.rs  mod.rs  themes.rs
src/ui/components/: calendar_view.rs  filter_bar.rs  mod.rs  modal_dialog.rs  report_panel.rs  status_bar.rs  task_detail.rs  task_form.rs  task_list.rs
src/ui/views/: calendar_view.rs  detail_view.rs  main_view.rs  mod.rs  projects_view.rs  reports_view.rs  settings_view.rs
src/utils/: formatting.rs  helpers.rs  keybindings.rs  mod.rs  validation.rs
