[package]
name = "lazytask"
version = "0.1.0"
edition = "2021"
default-run = "lazytask"
authors = ["LazyTask Contributors"]
description = "Modern Terminal User Interface for Taskwarrior"
license = "MIT"
repository = "https://github.com/osamamahmood/lazytask"

[[bin]]
name = "lazytask"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.48", features = ["full"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
config = "0.15"
dirs = "6.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
